<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>
    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_category" />
    </group>
    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
    </group>
    <group android:id="@+id/view_order_group">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_tools" />
    </group>
    <group android:id="@+id/view_logout">
        <item
            android:id="@+id/nav_view_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
