<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/welcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/welcom"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/desc_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:text="@string/info_login"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_countryPreference="ml"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_autoFormatNumber="false"
                    app:ccp_countryAutoDetectionPref="SIM_ONLY"
                    app:ccp_defaultLanguage="FRENCH"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_customMasterCountries="ML"
                    app:ccp_showNameCode="false"
                    />
                <EditText
                    android:id="@+id/edt_phoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/contactUs_phoneNo"
                    android:inputType="phone"
                    android:maxLength="8"
                    android:textColor="@color/black" />

            </LinearLayout>


            <Button
                android:id="@+id/send_otp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/black"
                android:text="Connexion"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/otp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edt_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="OTP"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_valide"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@color/black"
                android:text="valider"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/resendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Resend OTP"
                    android:textColor="@color/colorPrimaryDark" />
                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:text="Skip and timer"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="gone"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>